fixed community service spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,7 @@ ul li a {
 .resCommunityService ul {
 	margin-left: 3.125%;
 	margin-right: 3.125%;
+	padding: 10px 5%;
 }
 /* Projects */
 .projects {
